--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,16 +1,20 @@
+name: Semgrep
+
 on:
   workflow_dispatch: {}
   pull_request: {}
   push:
-    branches:
-    - main
-    - master
+    branches: [main, master]
+    # Run when rules or JS/TS code changes
     paths:
-    - .github/workflows/semgrep.yml
+      - .semgrep.yml
+      - .github/workflows/semgrep.yml
+      - "**/*.js"
+      - "**/*.ts"
+  # Daily scheduled scan (UTC time)
   schedule:
-  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 40 4 * * *
-name: Semgrep
+    - cron: "40 04 * * *"
+
 jobs:
   semgrep:
     name: semgrep/ci
@@ -20,7 +24,8 @@ jobs:
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
-      image: semgrep/semgrep
+      image: semgrep/semgrep:1.131.0
     steps:
-    - uses: actions/checkout@v4
-    - run: semgrep ci
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
