--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,48 +1,16 @@
 name: Semgrep
-
 on:
   workflow_dispatch:
   pull_request:
-  push:
-    branches:
-      - main
-      - master
-    paths:
-      - .semgrep.yml
-      - .github/workflows/semgrep.yml
-      - "**/*.js"
-      - "**/*.ts"
-  schedule:
-    - cron: "40 04 * * *" # UTC
+  push: { branches: [main, master] }
 
 jobs:
   semgrep:
-    name: semgrep/ci
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
-    container:
-      image: semgrep/semgrep:1.131.0
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: returntocorp/semgrep-action@v1
         with:
-          fetch-depth: 0
-
-      - name: Debug confirm rule file
-        run: |
-          set -e
-          pwd
-          ls -la
-          if [ -f ".semgrep.yml" ]; then
-            echo "Found .semgrep.yml"
-          else
-            echo "Missing .semgrep.yml"
-            exit 1
-          fi
-
-      - name: Run Semgrep with local rules
-        run: semgrep ci --config .semgrep.yml --verbose
+          config: .semgrep.yml # <-- this is the key line
